some more digging
- x-cloak
- styles

--- a/src/style.css
+++ b/src/style.css
@@ -6,3 +6,12 @@
   color: #2c3e50;
   margin-top: 60px;
 }
+
+ul {
+  list-style: none;
+  padding-left: 0;
+}
+
+[x-cloak] {
+  display: none !important;
+}
